# netchain

./: .gitignore  COMPREHENSIVE_TESTING_GUIDE.md  CONSENSUS_ENHANCEMENTS.md  CONTRIBUTING.md  Cargo.toml  HIGH_PERFORMANCE_SCALING.md  INSTALL_DEPENDENCIES.md  INTEROPERABILITY_COMPLETE.md  INTEROPERABILITY_GUIDE.md  NETCHAIN_SCALING_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  README.md  SCALING_IMPLEMENTATION_SUMMARY.md  SMART_CONTRACTS_GUIDE.md  SMART_CONTRACTS_SUMMARY.md  TESTING_COMPLETE_SUMMARY.md  WINDOWS_BUILD_SETUP.md  demo_results.txt  run_demo.ps1  run_scalability_demo.ps1
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: main.rs
contracts/netchain_storage/: Cargo.toml  DEPLOYMENT.md  lib.rs
contracts/netchain_storage/src/: main.rs
docker/: Dockerfile  Dockerfile.tests  docker-compose.yml  run-tests.sh
docs/: ARCHITECTURE.md  GETTING_STARTED.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: contract_fuzzer.rs  ibc_fuzzer.rs  oracle_fuzzer.rs
interoperability/: cross_chain_demo.rs
node/: Cargo.toml
node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
pallets/ibc-core/: Cargo.toml
pallets/ibc-core/src/: lib.rs
pallets/oracle/: Cargo.toml
pallets/oracle/src/: lib.rs
pallets/parallel-executor/: Cargo.toml
pallets/parallel-executor/src/: lib.rs
pallets/sharding/: Cargo.toml
pallets/sharding/src/: lib.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  performance.rs  tests.rs
runtime/src/configs/: mod.rs
tests/: interoperability_test.rs
tests/integration/: comprehensive_integration_tests.rs
tests/performance/: fee_benchmarks.rs  tps_benchmarks.rs
tests/security/: attack_simulations.rs  consensus_security_tests.rs  contract_security_tests.rs
