[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
    "pallets/template",
    "pallets/ibc-core",
    "pallets/oracle",
    "benchmarks",
]

[workspace.dependencies]
# Substrate core
frame-benchmarking = { version = "15.0.0", default-features = false }
frame-benchmarking-cli = { version = "19.0.0" }
frame-executive = { version = "15.0.0", default-features = false }
frame-support = { version = "15.0.0", default-features = false }
frame-system = { version = "15.0.0", default-features = false }
frame-system-benchmarking = { version = "15.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "13.0.0", default-features = false }
frame-try-runtime = { version = "0.21.0", default-features = false }

# Substrate pallets
pallet-aura = { version = "14.0.0", default-features = false }
pallet-balances = { version = "15.0.0", default-features = false }
pallet-grandpa = { version = "15.0.0", default-features = false }
pallet-sudo = { version = "15.0.0", default-features = false }
pallet-timestamp = { version = "14.0.0", default-features = false }
pallet-transaction-payment = { version = "15.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "15.0.0", default-features = false }

# Substrate primitives
sp-api = { version = "13.0.0", default-features = false }
sp-block-builder = { version = "13.0.0", default-features = false }
sp-consensus-aura = { version = "0.19.0", default-features = false }
sp-consensus-grandpa = { version = "8.0.0", default-features = false }
sp-core = { version = "15.0.0", default-features = false }
sp-genesis-builder = { version = "0.5.0", default-features = false }
sp-inherents = { version = "13.0.0", default-features = false }
sp-offchain = { version = "13.0.0", default-features = false }
sp-runtime = { version = "18.0.0", default-features = false }
sp-session = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "13.0.0", default-features = false }
sp-version = { version = "16.0.0", default-features = false }

# Substrate client
sc-basic-authorship = { version = "0.21.0" }
sc-cli = { version = "0.23.0" }
sc-client-api = { version = "15.0.0" }
sc-consensus = { version = "0.20.0" }
sc-consensus-aura = { version = "0.21.0" }
sc-consensus-grandpa = { version = "0.16.0" }
sc-executor = { version = "0.19.0" }
sc-network = { version = "0.21.0" }
sc-offchain = { version = "16.0.0" }
sc-rpc-api = { version = "0.20.0" }
sc-service = { version = "0.22.0" }
sc-telemetry = { version = "9.0.0" }
sc-transaction-pool = { version = "15.0.0" }
sc-transaction-pool-api = { version = "15.0.0" }

# Substrate RPC
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { version = "16.0.0" }
substrate-frame-rpc-system = { version = "15.0.0" }
pallet-transaction-payment-rpc = { version = "17.0.0" }

# External dependencies
clap = { version = "4.0.9", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
log = { version = "0.4.17" }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.108" }
tokio = { version = "1.32.0", features = ["macros", "time", "rt-multi-thread"] }

# Enhanced consensus pallets
pallet-authorship = { version = "15.0.0", default-features = false }
pallet-babe = { version = "15.0.0", default-features = false }
pallet-offences = { version = "14.0.0", default-features = false }
pallet-session = { version = "15.0.0", default-features = false }
pallet-staking = { version = "15.0.0", default-features = false }
pallet-staking-reward-curve = { version = "6.0.0", default-features = false }
sp-consensus-babe = { version = "0.19.0", default-features = false }
sp-staking = { version = "13.0.0", default-features = false }

# Smart contracts support
pallet-contracts = { version = "14.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "9.0.0", default-features = false }

# Local dependencies
pallet-template = { path = "pallets/template", default-features = false }
pallet-ibc-core = { path = "pallets/ibc-core", default-features = false }
pallet-oracle = { path = "pallets/oracle", default-features = false }

# IBC and interoperability dependencies
ibc = { version = "0.57", default-features = false }
ibc-core = { version = "0.57", default-features = false }
ibc-apps = { version = "0.57", default-features = false }
ibc-clients = { version = "0.57", default-features = false }
tendermint = { version = "0.39", default-features = false }
tendermint-proto = { version = "0.39", default-features = false }

# Testing dependencies
sp-std = { version = "14.0.0", default-features = false }

# Performance and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
subxt = { version = "0.35", features = ["substrate-compat"] }
indicatif = { version = "0.17" }
rand = { version = "0.8" }
csv = { version = "1.1" }

# Fuzzing dependencies
arbitrary = { version = "1.0", features = ["derive"] }
libfuzzer-sys = { version = "0.4" }