[package]
name = "netchain-benchmarks"
version = "0.1.0"
authors = ["Netchain Core Team"]
edition = "2021"
description = "High-performance TPS benchmarking suite for Netchain"

[dependencies]
# Substrate client dependencies
subxt = { version = "0.37", features = ["substrate-compat"] }
sp-core = "37.0.0"
sp-keyring = "42.0.0"
sp-runtime = "39.0.0"

# Async processing
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Utilities  
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
indicatif = "0.17"
csv = "1.3"

# Performance monitoring
tokio-metrics = "0.3"
sysinfo = "0.32"

# Statistics
hdrhistogram = "7.5"