[package]
name = "netchain-node-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.netchain-node]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "contract_fuzzer"
path = "fuzz_targets/contract_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oracle_fuzzer"
path = "fuzz_targets/oracle_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ibc_fuzzer"
path = "fuzz_targets/ibc_fuzzer.rs"
test = false
doc = false
bench = false
