[package]
name = "pallet-ibc-core"
version = "0.1.0"
description = "IBC core implementation for Netchain cross-chain communication"
authors = ["Netchain Core Team"]
homepage = "https://github.com/bunkercorporation/netchain"
edition = "2021"
license = "Apache-2.0"
publish = false
repository = "https://github.com/bunkercorporation/netchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate dependencies
frame-benchmarking = { optional = true, workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

# Codec
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

# IBC dependencies (simplified - we'll use basic types)
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"codec/std",
	"scale-info/std",
	"serde",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]