[package]
name = "pallet-parallel-executor"
version = "0.1.0"
authors = ["Netchain Core Team"]
edition = "2021"
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Parallel transaction execution engine for ultra-high TPS"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate dependencies
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# Parallel processing
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"], optional = true }
rayon = { version = "1.7", optional = true }
futures = { version = "0.3", optional = true }
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "tokio",
    "rayon",
    "futures",
    "async-trait",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]